--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,34 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Everton da Rosa
+email: everton3x@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Página pessoal do Everton3x, também conhecido como Everton da Rosa.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://everton3x.github.io" # the base hostname & protocol for your site
+twitter_username: everton3x
+github_username:  everton3x
+timezone: America/Sao_Paulo
+encoding: utf-8
 
 # Build settings
 markdown: kramdown
+lsi: True #Produce an index for related posts. Requires the classifier-reborn plugin.
+
+#defaults
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      author: "Everton da Rosa"
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
+      author: "Everton da Rosa"
